refactor: update project files and improve build configuration
- Added ArtSpace.vcxproj.filters to organize project files into filters for better management.
- Removed feedback.cpp and game_state.cpp from the project to streamline the codebase.
- Updated .gitignore to exclude ArtSpace/x64/* and include ArtSpace/ArtSpace.vcxproj.filters for better version control.
- Ensured Dependencies folder remains tracked while excluding unnecessary build artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ ipch/
 /[Oo]bj/
 /[Ll]og/
 /[Ll]ogs/
-
+ArtSpace/x64/*
 ## Visual C++ cache files
 *.ib_pdb_index
 *.idb
@@ -87,3 +87,4 @@ Icon
 # Exclude Dependencies folder from ignore rules
 !Dependencies/
 !Dependencies/**
+!ArtSpace/ArtSpace.vcxproj.filters
