chore: update .gitignore to include ArtSpace build directories
- Added exclusions for ArtSpace/x64/Release/ and ArtSpace/x64/Debug/ directories to prevent tracking of build artifacts.
- Ensured ArtSpace.vcxproj.filters remains tracked for project organization.

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,7 @@ Icon
 !Dependencies/
 !Dependencies/**
 !ArtSpace/ArtSpace.vcxproj.filters
+
+**/ArtSpace/x64/**
+**/ArtSpace/x64/Release/**
+**/ArtSpace/x64/Debug/**
