refactor: remove collision and puzzle modules, update project structure
- Deleted collision.cpp and collision.h to streamline the codebase and remove unused functionality.
- Removed puzzle.cpp and puzzle.h, simplifying the project structure.
- Introduced navigator.cpp and screen_manager.cpp to enhance project organization.
- Updated ArtSpace.vcxproj and ArtSpace.vcxproj.filters to reflect the changes in source and header files.

--- a/ArtSpace/ArtSpace.vcxproj.filters
+++ b/ArtSpace/ArtSpace.vcxproj.filters
@@ -18,16 +18,7 @@
     <ClCompile Include="..\ArtSpace\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="sound_manager.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
-    <ClCompile Include="sound_manager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="input.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="puzzle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="room.cpp">
@@ -48,10 +39,13 @@
     <ClCompile Include="camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="collision.cpp">
+    <ClCompile Include="config.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="config.cpp">
+    <ClCompile Include="screen_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="navigator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -60,9 +54,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="input.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="puzzle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="room.h">
@@ -80,10 +71,22 @@
     <ClInclude Include="artwork_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="collision.h">
+    <ClInclude Include="config.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="config.h">
+    <ClInclude Include="lever.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="navigator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="screen_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="screens.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="screen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
