--- a/ArtSpace/ArtSpace.vcxproj
+++ b/ArtSpace/ArtSpace.vcxproj
@@ -23,13 +23,11 @@
     <ClCompile Include="artwork.cpp" />
     <ClCompile Include="artwork_manager.cpp" />
     <ClCompile Include="camera.cpp" />
-    <ClCompile Include="collision.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="input.cpp" />
-    <ClCompile Include="puzzle.cpp" />
+    <ClCompile Include="navigator.cpp" />
     <ClCompile Include="room.cpp" />
-    <ClCompile Include="sound_manager.cpp" />
-    <ClCompile Include="sound_manager.h" />
+    <ClCompile Include="screen_manager.cpp" />
     <ClCompile Include="texture_manager.cpp" />
     <ClCompile Include="utility.cpp" />
   </ItemGroup>
@@ -37,11 +35,14 @@
     <ClInclude Include="artwork.h" />
     <ClInclude Include="artwork_manager.h" />
     <ClInclude Include="camera.h" />
-    <ClInclude Include="collision.h" />
     <ClInclude Include="config.h" />
     <ClInclude Include="input.h" />
-    <ClInclude Include="puzzle.h" />
+    <ClInclude Include="lever.h" />
+    <ClInclude Include="navigator.h" />
     <ClInclude Include="room.h" />
+    <ClInclude Include="screen.h" />
+    <ClInclude Include="screens.h" />
+    <ClInclude Include="screen_manager.h" />
     <ClInclude Include="texture_manager.h" />
     <ClInclude Include="utility.h" />
   </ItemGroup>
