feat: add GameManager class for centralized game logic and artwork management
- Introduced GameManager class to encapsulate game logic, including artwork tracking, camera management, and game state handling.
- Added game_manager.h header file and integrated it into the project structure.
- Updated main application to utilize GameManager for rendering and input handling, streamlining the overall architecture.
- Enhanced project files to include new GameManager dependencies and ensure proper organization.

--- a/ArtSpace/ArtSpace.vcxproj
+++ b/ArtSpace/ArtSpace.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="artwork_manager.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="config.h" />
+    <ClInclude Include="game_manager.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="lever.h" />
     <ClInclude Include="navigator.h" />
