--- a/ArtSpace/ArtSpace.vcxproj.filters
+++ b/ArtSpace/ArtSpace.vcxproj.filters
@@ -83,5 +83,8 @@
     <ClInclude Include="screen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="game_manager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
