--- a/ArtSpace/ArtSpace.vcxproj
+++ b/ArtSpace/ArtSpace.vcxproj
@@ -25,7 +25,9 @@
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="input.cpp" />
+    <ClCompile Include="navigator.cpp" />
     <ClCompile Include="room.cpp" />
+    <ClCompile Include="screen_manager.cpp" />
     <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -36,7 +38,11 @@
     <ClInclude Include="game_manager.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="lever.h" />
+    <ClInclude Include="navigator.h" />
     <ClInclude Include="room.h" />
+    <ClInclude Include="screen.h" />
+    <ClInclude Include="screens.h" />
+    <ClInclude Include="screen_manager.h" />
     <ClInclude Include="utility.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
