feat: integrate Lever and SoundManager into GameManager for enhanced gameplay mechanics
- Added Lever class to manage lever interactions, including activation and visual feedback through bulbs.
- Updated GameManager to initialize and manage the Lever instance, including win condition checks and sound effects.
- Integrated SoundManager for audio feedback during lever activation, enhancing player experience.
- Updated project files to include new dependencies and ensure proper organization of the game logic.

--- a/ArtSpace/ArtSpace.vcxproj
+++ b/ArtSpace/ArtSpace.vcxproj
@@ -37,6 +37,7 @@
     <ClInclude Include="input.h" />
     <ClInclude Include="lever.h" />
     <ClInclude Include="room.h" />
+    <ClInclude Include="sound_manager.h" />
     <ClInclude Include="utility.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
